--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,6 +4,7 @@
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap");
 html {
   line-height: 1.15;
   /* 1 */
@@ -339,4 +340,160 @@ template {
 [hidden] {
   display: none;
 }
+
+/* -------------------------------- 
+
+Typography
+
+-------------------------------- */
+:root {
+  --font-primary: 'Open Sans', sans-serif;
+  --font-secondary: Arial, sans-serif;
+  --font-code: monospace;
+  /* set base values */
+  --text-base-size: 1em;
+  --text-scale-ratio: 1.2;
+  /* type scale */
+  --text-xs: calc(1em / (var(--text-scale-ratio) * var(--text-scale-ratio)));
+  --text-sm: calc(1em / var(--text-scale-ratio));
+  --text-md: calc(1em * var(--text-scale-ratio));
+  --text-lg: calc(1em * var(--text-scale-ratio) * var(--text-scale-ratio));
+  --text-xl: calc(1em * var(--text-scale-ratio) * var(--text-scale-ratio) * var(--text-scale-ratio));
+  --text-xxl: calc(1em * var(--text-scale-ratio) * var(--text-scale-ratio) * var(--text-scale-ratio) * var(--text-scale-ratio));
+  --text-xxxl: calc(1em * var(--text-scale-ratio) * var(--text-scale-ratio) * var(--text-scale-ratio) * var(--text-scale-ratio) * var(--text-scale-ratio));
+  /* line-height */
+  --heading-line-height: 1.2;
+  --body-line-height: 1.4;
+  /* spacing values */
+  --space-xxxs: 0.25em;
+  --space-xxs:  0.375em;
+  --space-xs:   0.5em;
+  --space-sm:   0.75em;
+  --space-md:   1.25em;
+  --space-lg:   2em;
+  --space-xl:   3.25em;
+  --space-xxl:  5.25em;
+  --space-xxxl: 8.5em;
+  /* typography color*/
+  --color-text: var(--tuna);
+  --color-text-heading: var(--black);
+  --color-link: var(--color-link-primary);
+  --color-link-visited: var(--color-link-primary-visited);
+}
+
+body {
+  font-size: var(--text-base-size);
+  font-family: var(--font-primary);
+  color: var(--color-text);
+}
+
+h1, h2, h3, h4, form legend {
+  color: var(--color-text-heading);
+  margin-bottom: var(--space-xxs);
+  line-height: var(--heading-line-height);
+}
+
+/* text size */
+.text--xxxl {
+  font-size: var(--text-xxxl);
+}
+
+h1, .text--xxl {
+  font-size: var(--text-xxl);
+}
+
+h2, .text--xl {
+  font-size: var(--text-xl);
+}
+
+h3, .text--lg {
+  font-size: var(--text-lg);
+}
+
+h4, .text--md {
+  font-size: var(--text-md);
+}
+
+.text--sm, small {
+  font-size: var(--text-sm);
+}
+
+.text--xs {
+  font-size: var(--text-xs);
+}
+
+p {
+  line-height: var(--body-line-height);
+}
+
+a {
+  color: var(--color-link-primary);
+}
+
+a:hover {
+  color: var(--color-link-primary);
+}
+
+a:active {
+  color: #000000;
+}
+
+a:visited {
+  color: var(--color-link-visited);
+}
+
+b, strong {
+  font-weight: bold;
+}
+
+.text-container h2, .text-container h3, .text-container h4 {
+  margin-top: var(--space-sm);
+}
+
+.text-container ul, .text-container ol, .text-container p {
+  margin-bottom: var(--space-md);
+}
+
+.text-container ul, .text-container ol {
+  list-style-position: outside;
+  padding-left: 24px;
+}
+
+.text-container ul {
+  list-style-type: disc;
+}
+
+.text-container ol {
+  list-style-type: decimal;
+}
+
+.text-container ul li, .text-container ol li {
+  line-height: var(--body-line-height);
+}
+
+.text-container em {
+  font-style: italic;
+}
+
+.text-container u {
+  text-decoration: underline;
+}
+
+code {
+  font-family: var(--font-code);
+}
+
+/* utility classes */
+.truncate {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+/* -------------------------------- 
+
+Variables
+
+-------------------------------- */
+/* COLOR */
 /*# sourceMappingURL=main.css.map */
