--- a/assets/css/helpers/_variables.scss
+++ b/assets/css/helpers/_variables.scss
@@ -4,9 +4,20 @@ Variables
 
 -------------------------------- */
 
-
-/* COLOR */
+//color
+$backgorund-color-base: #f7f7f7;
 $black: #000000;
+$chrysler-dark-quartz-gray: #5e646a;
 $tuna: #4d4e53; 
 $color-link-primary: #00458b;
 $color-link-primary-visited: #313131;
+
+
+//nav__bar nav__list
+$border-menu-color: #99a2a2;
+$border-menu-shadow: 10px;
+$delay-transion-menu: 0.8s;
+$function-transion-menu: ease-in-out;
+
+
+
