--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -515,6 +515,7 @@ Variables
   height: auto;
   min-width: 29em;
   overflow: hidden;
+  background-color: inherit;
   border-right: 2px solid #99a2a2;
 }
 
