--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -515,7 +515,6 @@ Variables
   height: auto;
   min-width: 29em;
   overflow: hidden;
-  background-color: inherit;
   border-right: 2px solid #99a2a2;
 }
 
@@ -539,6 +538,7 @@ Variables
       -ms-flex-align: center;
           align-items: center;
   padding-left: 3em;
+  background-color: #f7f7f7;
   border-bottom: 1px solid #99a2a2;
 }
 
@@ -569,6 +569,7 @@ Variables
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
+  background-color: #f7f7f7;
 }
 
 .nav__list .nav__item {
